[package]
name = "mqttui"
description = "Subscribe to a MQTT Topic or publish something quickly from the terminal"
version = "0.16.2"
license = "GPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/mqttui"
authors = ["EdJoPaTo <mqttui-rust@edjopato.de>"]
edition = "2021"
rust-version = "1.57.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls"]
tls = ["rumqttc/use-rustls", "rumqttc/websocket", "rustls", "rustls-native-certs"]

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["deprecated", "derive", "env"] }
clap_complete = "3"
url = "2"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "3", features = ["deprecated", "derive", "env", "wrap_help"] }
crossterm = "0.25"
ego-tree = "0.6"
json = "0.12"
rand = "0.8"
rumqttc = { version = "0.14", default-features = false }
rustls = { version = "0.20", features = ["dangerous_configuration"], optional = true }
rustls-native-certs = {version = "0.6", optional = true}
tui = "0.19"
tui-tree-widget = "0.10"
url = "2"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
assets = [
    ["target/release/mqttui", "/usr/bin/mqttui", "755"],
    ["LICENSE", "/usr/share/licenses/mqttui/LICENSE", "644"],
    ["README.md", "/usr/share/doc/mqttui/README.md", "644"],

    ["target/completions/mqttui.bash", "/usr/share/bash-completion/completions/mqttui", "644"],
    ["target/completions/mqttui.fish", "/usr/share/fish/completions/mqttui.fish", "644"],
    ["target/completions/_mqttui", "/usr/share/zsh/site-functions/_mqttui", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mqttui", dest = "/usr/bin/mqttui", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/mqttui/LICENSE", mode = "644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/mqttui/README.md", mode = "644", doc = true },

    { source = "target/completions/mqttui.bash", dest = "/usr/share/bash-completion/completions/mqttui", mode = "644" },
    { source = "target/completions/mqttui.fish", dest = "/usr/share/fish/vendor_completions.d/mqttui.fish", mode = "644" },
    { source = "target/completions/_mqttui", dest = "/usr/share/zsh/site-functions/_mqttui", mode = "644" },
]
