[package]
name = "mqttui"
description = "Subscribe to a MQTT Topic or publish something quickly from the terminal"
version = "0.21.1"
license = "GPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/mqttui"
authors = ["EdJoPaTo <mqttui-rust@edjopato.de>"]
keywords = ["mqtt", "iot", "tui", "cli", "terminal"]
categories = ["command-line-utilities", "network-programming"]
edition = "2021"
rust-version = "1.74.0"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
anyhow = "1"
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
url = "2"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
ego-tree = "0.6"
rand = "0.8"
ratatui = "0.28"
ratatui-binary-data-widget = { git = "https://github.com/EdJoPaTo/ratatui-binary-data-widget", branch = "ratatui-v0.28" }
rmpv = { version = "1", features = ["with-serde"] }
rumqttc = { version = "0.24", features = ["websocket"] }
rustls = "0.22"
rustls-native-certs = "0.7"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-tree-widget = "0.22"
url = "2"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
depends = ""
assets = [
	["target/release/mqttui", "/usr/bin/", "755"],
	["CHANGELOG.md", "/usr/share/doc/mqttui/", "644"],
	["LICENSE", "/usr/share/licenses/mqttui/", "644"],
	["README.md", "/usr/share/doc/mqttui/", "644"],

	["target/completions/mqttui.bash", "/usr/share/bash-completion/completions/mqttui", "644"],
	["target/completions/mqttui.fish", "/usr/share/fish/completions/", "644"],
	["target/completions/_mqttui", "/usr/share/zsh/site-functions/", "644"],

	["target/manpages/*", "/usr/share/man/man1/", "644"],
]

# https://crates.io/crates/cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/mqttui", dest = "/usr/bin/", mode = "755" },
	{ source = "CHANGELOG.md", dest = "/usr/share/doc/mqttui/", mode = "644", doc = true },
	{ source = "LICENSE", dest = "/usr/share/licenses/mqttui/", mode = "644", doc = true },
	{ source = "README.md", dest = "/usr/share/doc/mqttui/", mode = "644", doc = true },

	{ source = "target/completions/mqttui.bash", dest = "/usr/share/bash-completion/completions/mqttui", mode = "644" },
	{ source = "target/completions/mqttui.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644" },
	{ source = "target/completions/_mqttui", dest = "/usr/share/zsh/site-functions/", mode = "644" },

	{ source = "target/manpages/*", dest = "/usr/share/man/man1/", mode = "644", doc = true },
]
